--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,21 @@
                   </executions>
 	  
   </plugin>
+<plugin>  
+            <!-- Build an executable JAR -->  
+            <groupId>org.apache.maven.plugins</groupId>  
+            <artifactId>maven-jar-plugin</artifactId>  
+            <version>3.1.0</version>  
+            <configuration>  
+                <archive>  
+                    <manifest>  
+                        <mainClass>jar.App</mainClass>  
+                    </manifest>  
+                </archive>  
+            </configuration>  
+        </plugin>  
+
+
   
   </plugins>
   </build>
