--- a/Ansible_deploy/cleanup_gcp.yml
+++ b/Ansible_deploy/cleanup_gcp.yml
@@ -1,1 +1,32 @@
+---
+- name: Clean Up Gcp Instances
+  hosts: localhost
+  
+  tasks:   
+    - name: Delete  disk
+      gcp_compute_disk:
+        name: "{{ gcp_disk_instance }}"
+        zone: us-central1-a
+        project: "{{ gcp_project }}"
+        auth_kind: "{{ gcp_cred_kind }}"
+        service_account_file: "{{ gcp_cred_file }}"
+        state: absent
+      
 
+    - name: Delete the address
+      gcp_compute_address:
+        name: "{{ gcp_address_instance }}"
+        region: us-central1
+        project: "{{ gcp_project }}"
+        auth_kind: "{{ gcp_cred_kind }}"
+        service_account_file: "{{ gcp_cred_file }}"
+        state: absent
+     
+    - name: Delete the instance
+      gcp_compute_instance:
+        name: "{{ gcp_compute_instance }}"     
+        zone: us-central1-a
+        project: "{{ gcp_project }}"
+        auth_kind: "{{ gcp_cred_kind }}"
+        service_account_file: "{{ gcp_cred_file }}"
+        state: absent
