--- a/Ansible_deploy/create_gcp_instance.yml
+++ b/Ansible_deploy/create_gcp_instance.yml
@@ -1,6 +1,8 @@
 ---
 - name: create GCP instance
   hosts: localhost
+  vars_files:
+    - ./app_vars.yml
   
   tasks:   
     - name: create a disk
