--- a/Ansible_deploy/cleanup_gcp.yml
+++ b/Ansible_deploy/cleanup_gcp.yml
@@ -1,6 +1,8 @@
 ---
 - name: Clean Up Gcp Instances
   hosts: localhost
+  vars_files:
+    - ./app_vars.yml
   
   tasks:   
     - name: Delete the instance
